--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,39 +1,52 @@
-.App {
-  text-align: center;
-  background-color: #61dafb;
+:root {
+  --primary-color: #2078e2;
+  --secondary-color: #ff00ff;
+  --primary-dark-color: #1f2232;
+  --primary-light-color: #f5f3f4;
+  --primary-gray-color: #626060;
+  --accent-color: #4161e1;
+  --error-color: #dc281e;
+  --white-color: #ffffff;
+  --bg-color: #08b5f4;
+  --font-size-input: 1.1rem;
+  --font-size-input-label: 0.8rem;
+  --font-size-paragraph: 1.2rem;
+  --font-size-title: 1.7rem;
+  --font-size-btn: 1.3rem;
+  --border-radius-btn-input: 5px;
+  --border-radius-form: 15px;
+  --title-font-family-title: -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
+}
+* {
+  text-decoration: none;
+  list-style: none;
+}
+body {
+  background-color: var(--bg-color);
+}
+h1 {
+  color: var(--primary-dark-color);
+  font-family: var(--title-font-family-title);
+  font-weight: 200;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn-app {
+  background-color: var(--accent-color);
+  color: var(--primary-light-color);
+  font-family: var(--title-font-family-title);
+  border-radius: var(--border-radius-btn-input);
+  font-size: var(--font-size-btn);
+  border: solid 1px;
+  width: 70%;
+  padding: 1rem;
+  margin: 2rem auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-app:hover {
+  color: var(--white-color);
+  background-color: var(--secondary-color);
+  border-radius: var(--border-radius-btn-input);
+  border: solid 1px var(--accent-color);
 }
