--- a/client/src/components/Input/input.css
+++ b/client/src/components/Input/input.css
@@ -1,10 +1,9 @@
-.input {
-  width: 80%;
-  margin: 1rem auto;
-  padding: 1rem;
+.input-app {
+  width: 70%;
+  margin: 1rem;
+  padding: 0.7rem;
   border: none;
-  font-size: larger;
-  border-bottom: 1px solid gray;
-  background-color: rgba(233, 230, 230, 0.162);
+  font-size: var(--font-size-input);
+  border-bottom: 1px solid var(--primary-gray-color);
   color: black;
 }
