--- a/client/src/components/Loading/loading.css
+++ b/client/src/components/Loading/loading.css
@@ -1,8 +1,8 @@
 .loading {
   border: 7px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 7px solid blue;
-  border-bottom: 7px solid blue;
+  border-top: 7px solid var(--primary-color);
+  border-bottom: 7px solid var(--primary-color);
   width: 50px;
   height: 50px;
   -webkit-animation: spin 2s linear infinite;
