--- a/client/src/pages/Auth/auth.css
+++ b/client/src/pages/Auth/auth.css
@@ -1,33 +1,24 @@
-.container {
-  margin: 1rem auto;
+.text-app {
+  font-size: var(--font-size-paragraph);
+  color: var(--primary-dark-color);
+  font-family: var(--title-font-family-title);
 }
-.login-form {
-  max-width: 40%;
-  margin: 1rem auto;
+
+.form-app {
+  max-width: 90%;
+  margin: 2rem auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(233, 230, 230, 0.758);
-  border-radius: 10px;
-  padding: 1rem;
+  background-color: var(--white-color);
+  color: var(--primary-color);
+  border-radius: var(--border-radius-form);
+  box-shadow: 0px 3px 6px var(--primary-gray-color);
 }
-.text-header {
-  font-weight: 400;
-}
-.submit-button {
-  width: 85%;
-  margin: 2rem auto;
-  background-color: rgb(9, 90, 239);
-  padding: 1rem;
-  border-radius: 10px;
-  font-size: larger;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-.p {
-  width: 90%;
-  align-self: flex-start;
-  justify-self: flex-start;
+
+@media only screen and (min-width: 768px) {
+  .form-app {
+    max-width: 40%;
+  }
 }
